@@ -2,6 +2,8 @@
 v5.0.0-git
 ----------
 
+[jan] Try harder to import attributes that don't match exactly the address book
+      configuration (Bug #14673).
 [jan] Add API to backup and restore user data.
 [jan] Show photos when displaying contacts in calendars.
 [jan] Add CLI script to search for invalid email addresses.
